syntax = 'proto3';

package laboratoire;

// Define gRPC service
service LaboratoireService {
  rpc GetResultById (GetResultRequest) returns (LaboratoryResult);
  rpc CreateResult (CreateResultRequest) returns (CreateResultResponse);
}

// Request for getting laboratory result by ID
message GetResultRequest {
  string id = 1;
}

// Laboratory result message
message LaboratoryResult {
  string id = 1;
  string patientId = 2;
  string testName = 3;
  string result = 4;
  string date = 5;
}

// Request to create a new laboratory result
message CreateResultRequest {
  string patientId = 1;
  string testName = 2;
  string result = 3;
  string date = 4;
}

// Response after creating a laboratory result
message CreateResultResponse {
  string message = 1;
  string resultId = 2;
}
